Issue #2974984 by rahulrasgon, bandanasharma, Neetika K, Sreenivas Bttv: Comment:Cross button UI and alignment under align is improper

--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -2,3 +2,10 @@ textarea {
   width: 100%;
   border: 1px solid $gray-400;
 }
+
+.editor-image-dialog {
+  .form-check-input {
+    margin-left: 0;
+    position: inherit;
+  }
+}
